adicionando prisma no projeto

--- a/.env-exemple
+++ b/.env-exemple
@@ -1,7 +1,7 @@
-BD_NAME="name_bd" # Nome do banco de dados
-BD_USER="user_bd" # Usuário do banco de dados
-BD_PASSWORD="password_bd" # Senha do Usuário do banco de dados
-BD_DIALECT="sgbd_db" # (Opicional) Banco de dados que está usando: postgres, mySql, oracle, e etc. 
+# Esse se trata da url de conexão com o BD, que o prisma utiliza, segue o seguinte formato:
+# Em caso de uso de outro banco de dados é necessario mudar de postgres para outro aqui e no schema.prisma
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA" 
 
 PORT=3000 # (Opicional) Porta que a aplicação vai rodar
 HOST_ALLOW="http://localhost" # Lista de hosts permitidos, separados por ","
