--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
     "prisma": "^5.3.1"
   }
