Adicionando rotas do backend

--- a/.env-exemple
+++ b/.env-exemple
@@ -5,3 +5,4 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA"
 
 PORT=3000 # (Opicional) Porta que a aplicação vai rodar
 HOST_ALLOW="http://localhost" # Lista de hosts permitidos, separados por ","
+SECRET_KEY="secret" # Chave para o controle de sessão
