--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.0.1",
         "pg": "^8.11.3",
         "prisma": "^5.3.1"
