Rota user funcionando como se espera

--- a/.env-exemple
+++ b/.env-exemple
@@ -5,4 +5,7 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA"
 
 PORT=3000 # (Opicional) Porta que a aplicação vai rodar
 HOST_ALLOW="http://localhost" # Lista de hosts permitidos, separados por ","
-SECRET_KEY="secret" # Chave para o controle de sessão
+
+KEY_JWT="secret" # Chave secreta para o uso do JWT
+ACCESS_TOKEN_DURATION_MINUTES=10 # Tempo de duranção em minutos para o token de access
+REFRESH_TOKEN_DURATION_MINUTES=6000 # Tempo de duranção em minutos para o token de refresh
