Adicionando docker-compose

--- a/.env-exemple
+++ b/.env-exemple
@@ -9,3 +9,9 @@ HOST_ALLOW="http://localhost" # Lista de hosts permitidos, separados por ","
 KEY_JWT="secret" # Chave secreta para o uso do JWT
 ACCESS_TOKEN_DURATION_MINUTES=10 # Tempo de duranção em minutos para o token de access
 REFRESH_TOKEN_DURATION_MINUTES=6000 # Tempo de duranção em minutos para o token de refresh
+
+# Docker Conection
+
+POSTGRES_DB="DATABASE"
+POSTGRES_USER="USER"
+POSTGRES_PASSWORD="PASSWORD"
